--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "almoment",
-  "version": "0.5.6",
+  "version": "0.5.8",
   "description": "Lightweight moment.js alternative",
   "keywords": [
     "moment",
@@ -65,6 +65,7 @@
     "sass-loader": "^12.1.0",
     "style-loader": "^3.2.1",
     "ts-loader": "^9.2.5",
+    "tsd-webpack-plugin": "^1.0.4",
     "typescript": "^4.3.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.46.0",
